[project]
name = "bikescore"
version = "0.2.0"
description = "Single-city bicycle network analysis — stress, connectivity, and access scoring as a database-free library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["bicycle", "network-analysis", "osm", "gis", "urban-mobility", "bikeability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
# Core deps only — the scoring library carries NO web/orchestration dependencies.
# (fastapi/uvicorn/anyio + the SQLite run store live in bikescore-app.)
dependencies = [
    # OSM parsing
    "osmium>=3.7",
    # Spatial operations
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    # Graph computation (CSR matrices + Dijkstra)
    "scipy>=1.13",
    "numpy>=2.0",
    # Data processing
    "polars>=1.0",
    "pandas>=2.0",
    # Parquet / GeoParquet I/O
    "pyarrow>=16.0",
    # Config validation
    "pydantic>=2.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # Logging
    "loguru>=0.7",
    # Async downloads (acquire — A6/38g)
    "aiohttp>=3.9",
    "tenacity>=8.0",
    # Census block data (US cities)
    "pygris>=0.1",
    # Rules / catalogs / scenarios (YAML)
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Parity validation against brokenspoke-analyzer reference parquets (/export-reference).
# The comparators (validation.py/deviations.py) are pure and need no extra deps; the
# Postgres reference export does — kept here so the core can regenerate references.
validation = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/bright-fakl/bikescore"
Documentation = "https://bright-fakl.github.io/bikescore"
Repository = "https://github.com/bright-fakl/bikescore"

[project.scripts]
bikescore-score = "bikescore.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bikescore"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
# tests/oracle/ is split-time scaffolding (gitignored, never shipped) — don't lint it.
extend-exclude = ["tests/oracle"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "ANN"]
ignore = [
    "E501",      # line too long (ruff format handles this)
    "ANN401",    # Any allowed for rule actions
    "ANN202",    # private-helper return annotations — not enforced on ports (declutter later)
    "RUF002",    # ambiguous unicode (en/em dash) in docstrings — deliberate prose in ports
    "RUF003",    # ambiguous unicode in comments — same
    "RUF022",    # __all__ ordering — ports keep bna-core's semantic grouping
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not slow and not integration\""
markers = [
    "slow: heavier parity/integration checks — deselect with -m 'not slow'",
    "oracle: requires the committed Aspen oracle baseline in tests/oracle/",
    "unit: pure unit test with no file I/O",
    "integration: requires local cached data — not run in CI",
]

[tool.coverage.run]
source = ["src/bikescore"]
omit = ["tests/*"]
